work places overflow fixed

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -27,3 +27,8 @@ p{
     width: 100%;
     height: 100vh;
 }
+
+.job-section {
+    width: 100%;
+   
+}
